--- a/frontend/src/app/task-form/task-form.component.html
+++ b/frontend/src/app/task-form/task-form.component.html
@@ -12,7 +12,7 @@
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Due date</mat-label>
-            <input [formControl]="form.controls.dueDate" matInput [matDatepicker]="picker" required>
+            <input [formControl]="form.controls.dueDate" matInput [matDatepicker]="picker" readonly required>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
